--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Pet Adoption</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root">Not rendered</div>
     <script type="module" src="./App.jsx"></script>
   </body>
